--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
     <script src="scripts/route.js"></script>
 
     <!-- Controllers -->
+    <script src="scripts/controllers/LoginController.js"></script>
     <script src="scripts/controllers/HomeController.js"></script>
     <script src="scripts/controllers/TaskController.js"></script>
 
