--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/route.js"></script>
+    <script src="scripts/config.js"></script>
 
     <!-- Controllers -->
     <script src="scripts/controllers/LoginController.js"></script>
